<resources>
    <string name="app_name">Zeplin</string>
    <string name="discover">Discover</string>
    <string name="map">Map</string>
    <string name="my_post">My Posts</string>
    <string name="request">Requests</string>
    <string name="my_network">My Network</string>
    <string name="search_bar">  Where do you like to connect?</string>
    <string name="name_sidemenu">John</string>
    <string name="place_sidemenu">Paris</string>
    <string name="home">Home</string>
    <string name="Cards_sub">Cards/Subscription</string>
    <string name="support">Support</string>
    <string name="request_sidemenu">My Request</string>
    <string name="share">Share</string>
    <string name="logout">Log out</string>
    <string name="connect">Connect</string>
    <string name="evelyn">Evelyn</string>
    <string name="ok">OK</string>
    <string name="explore">Explore Paris</string>
    <string name="title_location_permission">GPS Permission</string>
    <string name="text_location_permission">GPS is required to be enabled for this section to get your location</string>
    <string name="google_maps_api_key">AIzaSyCEp9nmNjLTPTDcSG_8F1IZvqVjBNfAT1o</string>
    <string name="john">John</string>
    <string name="timing">6d 2h left</string>
    <string name="review">222 Reviews</string>
    <string name="send_req">Send Request</string>
    <string name="titletext">Lorem ipsum dolor sit amet, consectetur lorem ipsum dolor sit amet, consectetur lorem ipsum.</string>
</resources>
