<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvMyPost"
    style="@style/match_wrap"
    android:layout_gravity="center"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        style="@style/match_parent"
        android:orientation="vertical">


        <RelativeLayout style="@style/match_parent">

            <ImageView
                android:id="@+id/imgParisPost"
                android:layout_width="match_parent"
                android:layout_height="@dimen/imageViewHeight"
                android:scaleType="centerCrop"
                android:src="@drawable/paris" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightRelative"
                android:background="@color/background_rl"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_titleparis"
                    style="@style/textview_rl_post"
                    android:layout_alignParentStart="true"
                    android:text="@string/explore"
                    android:textSize="@dimen/font_large" />

                <TextView
                    style="@style/textview_rl_post"
                    android:layout_alignParentEnd="true"
                    android:drawableEnd="@drawable/icon_trash"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:drawableStart="@drawable/icon_edit"
                    android:paddingEnd="@dimen/paddingEnd" />
            </RelativeLayout>


            <Switch
                style="@style/wrap_content"
                android:layout_alignBottom="@id/imgParisPost"
                android:layout_alignStart="@id/imgParisPost"
                android:layout_margin="@dimen/switch_margin"
                android:background="@drawable/search_bar_layout"
                android:backgroundTint="@color/colorPrimaryDark" />


            <LinearLayout
                style="@style/match_wrap"
                android:layout_below="@id/imgParisPost"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    style="@style/match_wrap"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/image_post"
                        android:src="@drawable/add_image_icon" />

                    <LinearLayout
                        style="@style/wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            style="@style/wrap_content"
                            android:text="@string/john"
                            android:textColor="@color/black" />

                        <RatingBar
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:numStars="5"
                            android:rating="4.5" />
                    </LinearLayout>

                    <TextView
                        style="@style/textview_post_below"
                        android:drawableStart="@drawable/time_1"
                        android:paddingStart="@dimen/tv_time_padding"
                        android:text="@string/timing" />

                    <TextView
                        style="@style/textview_post_below"
                        android:drawableStart="@drawable/reviews"
                        android:paddingStart="@dimen/tv_review_padding"
                        android:text="@string/review" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/match_wrap"
                    android:text="@string/titletext"
                    android:textColor="@color/black" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>