<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_parent"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rl_network"
        style="@style/match_wrap"
        android:layout_marginTop="@dimen/spacing_medium"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_img"
            style="@style/circularImg_network"
            android:src="@drawable/paris" />

        <TextView
            android:id="@+id/tv_nameNet"
            style="@style/textview_network"
            android:layout_toEndOf="@id/profile_img"
            android:text="@string/evelyn"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/placeName"
            style="@style/textview_network"
            android:layout_below="@id/tv_nameNet"
            android:layout_toEndOf="@id/profile_img"
            android:drawablePadding="@dimen/spacing_very_tiny"
            android:drawableStart="@drawable/icon_location"
            android:text="@string/place_sidemenu"
            android:textSize="@dimen/font_small" />


        <RatingBar
            android:id="@+id/ratingbarnetwork"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:numStars="5"
            android:rating="4.5" />

        <TextView
            android:id="@+id/btn_connect"
            style="@style/textview_network_below"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/ratingbarnetwork"
            android:background="@drawable/circular_button"
            android:text="@string/connect" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightView"
            android:layout_below="@id/btn_connect"
            android:background="@color/backgroun_network" />


    </RelativeLayout>
</LinearLayout>